- 2.4.29
    - Ignis attack modifier can apply blazing brand up to 5 layers only
    - Fix humanoid golem player skin renderer not rendering outer layer
    - Add patrol mode

- 2.4.28
    - Add Cataclysm compat
    - Make cyclic damage detection default off
    - Fix player immune upgrade to be only immune to owner and applies

- 2.4.27
    - Fix humanoid golems use player skin by default

- 2.4.26
    - Add player skin support for golems
    - Add config option to not make hostile mobs automatically hostile to golems
    - Touhou Little Maid compat: command wand can edit their curio

- 2.4.25
    - Fix enchantment damage bonus not working on Large Golem Weapons
    - Fix large golem weapon cannot be enchanted in enchanting table
    - Fix compatibility with newest L2Library attribute tab

- 2.4.24
    - Fix the bug that golem with corrupted data cannot be placed
    - Prevent future golem data corruption

- 2.4.23
    - Fix command wand attack config
    - Add upgrade slot config
    - Fix damage calculation
    - Greatly improved golem swimming speed with Swim upgrade
    - Allow golems to jump in water
    - When mounted, shift in water means sink down
    - Fix not able to attack player actively

- 2.4.22
    - fix compatibility with REI
    - add captain and squad mode
    - add free wander mode
    - make talented upgrade cheaper

- 2.4.21
    - fix riding flickering
    - target filter action show in message
    - fix datapack target filter removing
    - trim name on datapack target filter
    - target reset time changed from 5 sec to 3 sec
    - fix wand scrolling

- 2.4.20
    - fix filter tab

- 2.4.19
    - texture fix

- 2.4.18
    - Add hostility compat
    - Add target cards and target filter tab
    - Add metalgolem weapons
    - Now metalgolem will also tick equipments
    - Curios support slot modifiers

- 2.4.17
    - Omnipotent Wand
    - Curios support for backpack
    - Add secondary weapon slot and arrow slot