@@ -13,7 +13,7 @@ jei_version = 15.2.0.23
 curios_version = 5.4.5+1.20.1
 
 modid = modulargolems
-ll_version = 2.4.29-pre1
+ll_version = 2.4.29-pre3
 lljij = true
 rootMod = false
 
