@@ -2,5 +2,5 @@ package dev.xkmc.modulargolems.content.entity.common;
 
 public enum GolemFlags {
 	IMMUNITY, FIRE_IMMUNE, FREEZE_IMMUNE, THUNDER_IMMUNE, SEE_THROUGH, RECYCLE,
-	FLOAT, SWIM, MENDING, NO_DESTROY, PASSIVE
+	FLOAT, SWIM, PICKUP, MENDING, NO_DESTROY, PASSIVE
 }
