@@ -2,6 +2,7 @@ package dev.xkmc.modulargolems.content.modifier.special;
 
 import dev.xkmc.modulargolems.content.core.StatFilterType;
 import dev.xkmc.modulargolems.content.entity.common.AbstractGolemEntity;
+import dev.xkmc.modulargolems.content.entity.common.GolemFlags;
 import dev.xkmc.modulargolems.content.modifier.base.GolemModifier;
 import dev.xkmc.modulargolems.init.data.MGConfig;
 import net.minecraft.ChatFormatting;
@@ -11,11 +12,17 @@ import net.minecraft.world.entity.ai.goal.Goal;
 
 import java.util.List;
 import java.util.function.BiConsumer;
+import java.util.function.Consumer;
 
 public class PickupModifier extends GolemModifier {
 
 	public PickupModifier() {
 		super(StatFilterType.HEALTH, 3);
+	}
+
+	@Override
+	public void onRegisterFlag(Consumer<GolemFlags> cons) {
+		cons.accept(GolemFlags.PICKUP);
 	}
 
 	@Override
