@@ -2,6 +2,7 @@ package dev.xkmc.modulargolems.events;
 
 import dev.xkmc.modulargolems.content.capability.GolemConfigCapability;
 import dev.xkmc.modulargolems.content.entity.common.AbstractGolemEntity;
+import dev.xkmc.modulargolems.content.entity.common.GolemFlags;
 import dev.xkmc.modulargolems.content.item.card.ClickEntityFilterCard;
 import dev.xkmc.modulargolems.init.ModularGolems;
 import dev.xkmc.modulargolems.init.data.MGConfig;
@@ -21,6 +22,7 @@ import net.minecraftforge.event.AttachCapabilitiesEvent;
 import net.minecraftforge.event.entity.EntityJoinLevelEvent;
 import net.minecraftforge.event.entity.living.LivingAttackEvent;
 import net.minecraftforge.event.entity.living.LivingDamageEvent;
+import net.minecraftforge.event.entity.living.LivingDropsEvent;
 import net.minecraftforge.event.entity.living.LivingHurtEvent;
 import net.minecraftforge.event.entity.player.PlayerInteractEvent;
 import net.minecraftforge.event.level.ExplosionEvent;
@@ -107,6 +109,15 @@ public class ModifierEventListeners {
 				if (ans != null) {
 					mob.targetSelector.addGoal(priority, ans);
 				}
+			}
+		}
+	}
+
+	@SubscribeEvent(priority = EventPriority.LOWEST)
+	public static void onLivingDrop(LivingDropsEvent event) {
+		if (event.getSource().getEntity() instanceof AbstractGolemEntity<?, ?> e) {
+			if (e.hasFlag(GolemFlags.PICKUP)) {
+				event.getDrops().forEach(x -> x.moveTo(e.position()));
 			}
 		}
 	}
