@@ -2,6 +2,8 @@
     - Ignis attack modifier can apply blazing brand up to 5 layers only
     - Fix humanoid golem player skin renderer not rendering outer layer
     - Add patrol mode
+    - Add Leviathan and Ender Guardian upgrade
+    - Mobs killed by golem with pickup upgrade will have drops spawned at the golem position
 
 - 2.4.28
     - Add Cataclysm compat
